Removed spacing issue from sections due to issue on profile page

--- a/frontend/src/pages/post/post.scss
+++ b/frontend/src/pages/post/post.scss
@@ -32,6 +32,10 @@
 	}
 }
 
+.extraWhitespace {
+	padding: $header-spacing;
+}
+
 .title {
 	color: #4D4D4D;
 	width: 100%;
